Dependency Injection added

--- a/upds_ventas/App.config
+++ b/upds_ventas/App.config
@@ -6,5 +6,7 @@
         <add name="upds_ventas.Properties.Settings.upds_ventasConnectionString"
             connectionString="Data Source=localhost;Initial Catalog=upds_ventas;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
+		<!--<add name="upds_ventas_database"
+			 connectionString=""/>-->
     </connectionStrings>
 </configuration>
