Failed using DI with two repositories and connection string not recognized for some reason

--- a/upds_ventas/App.config
+++ b/upds_ventas/App.config
@@ -1,12 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
+    <!--<configSections>
     </configSections>
     <connectionStrings>
-        <add name="upds_ventas.Properties.Settings.upds_ventasConnectionString"
+        --><!--<add name="upds_ventas.Properties.Settings.upds_ventasConnectionString"
             connectionString="Data Source=localhost;Initial Catalog=upds_ventas;Integrated Security=True;TrustServerCertificate=True"
-            providerName="System.Data.SqlClient" />
-		<!--<add name="upds_ventas_database"
-			 connectionString=""/>-->
-    </connectionStrings>
+            providerName="System.Data.SqlClient" />--><!--
+    </connectionStrings>-->
 </configuration>
