--- a/upds_ventas/upds_ventas.csproj
+++ b/upds_ventas/upds_ventas.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models.back\**" />
+    <EmbeddedResource Remove="Models.back\**" />
+    <None Remove="Models.back\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
