--- a/upds_ventas/App.config
+++ b/upds_ventas/App.config
@@ -1,3 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="upds_ventas.Properties.Settings.tickets_cineConnectionString"
+            connectionString="Data Source=localhost;Initial Catalog=tickets_cine;Integrated Security=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
 </configuration>
